--- a/1st portfolio website.html
+++ b/1st portfolio website.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA=Compatible" content="ie-edge">
         <title>my portfolio website</title>
-        <style></style>
-    </head>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+
+</head>
+
     <body>
-        <h1>my first portfolio website</h1>
+        <header>
+            <div class="half-width">
+                <h1>Hi , i am</h1>
+                <h1 class="name-style">salman</h1>
+                <h3 class="sub-title">world class web developer</h3>
+                <p class="pragraph">I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night; I like to feel the music flowing on my face, I like to smell the wind coming from the ocean. I like to look at the clouds in the sky with a blank mind, I like to do thought experiment when I cannot sleep in the middle of the night. I like flowers in spring, rain in summer, leaves in autumn, and snow in winter. I like to sleep early, I like to get up late; I like to be alone, I like to be surrounded by people. I like country’s peace, I like metropolis’ noise; I like the beautiful west lake in Hangzhou, I like the flat cornfield in Champaign. I like delicious food and comfortable shoes; I like good books and romantic movies. I like the land and the nature, I like people. And, I like to laugh.</p>
+            </div>
+            <div class="half-width">
+                <img src="jhankar.png">s
+            </div>
+        </header>
+
 
     </body>
 </html>
